fix social media links formatting and date spacing issues

--- a/media/cv-print.css
+++ b/media/cv-print.css
@@ -79,6 +79,7 @@ code {
 p code {
 	position: absolute;
 	left: -10%;
+	margin-right: 0.5em;
 }
 
 
